--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,10 +1,34 @@
 {
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-4aea6b84.css",
+    "src": "src/routes/+page.css"
+  },
+  ".svelte-kit/generated/client-optimized/nodes/0.js": {
+    "file": "_app/immutable/chunks/0-923d188d.js",
+    "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__layout-da46b06b.js",
+      "node_modules/.pnpm/@sveltejs+kit@1.3.2_svelte@3.55.1+vite@4.0.4/node_modules/@sveltejs/kit/src/runtime/components/layout.svelte"
+    ]
+  },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-49e22dd7.js",
+    "file": "_app/immutable/chunks/1-5a9ad817.js",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
       "node_modules/.pnpm/@sveltejs+kit@1.3.2_svelte@3.55.1+vite@4.0.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+    ]
+  },
+  "__layout-da46b06b.js": {
+    "file": "_app/immutable/chunks/_layout-da46b06b.js"
+  },
+  ".svelte-kit/generated/client-optimized/nodes/2.js": {
+    "file": "_app/immutable/chunks/2-90774142.js",
+    "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/+page.svelte"
     ]
   },
   "src/routes/+layout.ts": {
@@ -15,67 +39,57 @@
       "__layout-da46b06b.js"
     ]
   },
-  ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-c1cbfe39.js",
-    "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/+page.svelte"
-    ]
-  },
-  "__layout-da46b06b.js": {
-    "file": "_app/immutable/chunks/_layout-da46b06b.js"
-  },
-  ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-65497289.js",
-    "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__layout-da46b06b.js",
-      "node_modules/.pnpm/@sveltejs+kit@1.3.2_svelte@3.55.1+vite@4.0.4/node_modules/@sveltejs/kit/src/runtime/components/layout.svelte"
-    ]
-  },
   "node_modules/.pnpm/@sveltejs+kit@1.3.2_svelte@3.55.1+vite@4.0.4/node_modules/@sveltejs/kit/src/runtime/components/layout.svelte": {
-    "file": "_app/immutable/components/layout.svelte-179de059.js",
+    "file": "_app/immutable/components/layout.svelte-d07039e6.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.3.2_svelte@3.55.1+vite@4.0.4/node_modules/@sveltejs/kit/src/runtime/components/layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-7014dcd9.js"
+      "_index-8a7f44a6.js"
     ]
   },
-  "_singletons-2d326a6c.js": {
-    "file": "_app/immutable/chunks/singletons-2d326a6c.js",
+  "_index-23be3d2b.js": {
+    "file": "_app/immutable/chunks/index-23be3d2b.js",
     "imports": [
-      "_index-7014dcd9.js"
+      "_index-8a7f44a6.js"
     ]
   },
   "node_modules/.pnpm/@sveltejs+kit@1.3.2_svelte@3.55.1+vite@4.0.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-0f671ea9.js",
+    "file": "_app/immutable/components/error.svelte-d6c5d89d.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.3.2_svelte@3.55.1+vite@4.0.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-7014dcd9.js",
-      "_singletons-2d326a6c.js"
+      "_index-8a7f44a6.js",
+      "_singletons-00820cb1.js"
     ]
   },
+  "_singletons-00820cb1.js": {
+    "file": "_app/immutable/chunks/singletons-00820cb1.js",
+    "imports": [
+      "_index-23be3d2b.js"
+    ]
+  },
+  "_index-8a7f44a6.js": {
+    "file": "_app/immutable/chunks/index-8a7f44a6.js"
+  },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-8119fc54.js",
+    "file": "_app/immutable/components/pages/_page.svelte-4c1091a9.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-7014dcd9.js"
+      "_index-8a7f44a6.js",
+      "_index-23be3d2b.js"
+    ],
+    "css": [
+      "_app/immutable/assets/_page-4aea6b84.css"
     ]
   },
-  "_index-7014dcd9.js": {
-    "file": "_app/immutable/chunks/index-7014dcd9.js"
-  },
   "node_modules/.pnpm/@sveltejs+kit@1.3.2_svelte@3.55.1+vite@4.0.4/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-0cdff2a2.js",
+    "file": "_app/immutable/start-baa71162.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.3.2_svelte@3.55.1+vite@4.0.4/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-7014dcd9.js",
-      "_singletons-2d326a6c.js"
+      "_index-8a7f44a6.js",
+      "_singletons-00820cb1.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
