--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"deploy": "vite build && gh-pages --dotfiles -d build"
+		"upload": "vite build && gh-pages --dotfiles -d build"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0",
